samples/_failures_safe/1761345491_cf8f65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b73ab67.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_7b73ab67.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
